--- a/node-development/app/sass/framework/_typography.sass
+++ b/node-development/app/sass/framework/_typography.sass
@@ -58,8 +58,11 @@ p
 	margin-bottom: 	$gutter 
 a 
 	color: $link-color
+	font-weight: 500
+	text-decoration: none
 	&:active, &:focus, &:hover 
 		background-color: rgba($brand-primary, 0.24) 
+		text-decoration: underline
 figcaption
 	font-size: $text--1
 	font-weight: 300
