--- a/node-development/app/sass/framework/components/_bc-feature-component.sass
+++ b/node-development/app/sass/framework/components/_bc-feature-component.sass
@@ -13,6 +13,7 @@
 		z-index: 10
 	&__intro
 		font-size: $text-01
+		font-weight: 300
 	&.is-full-vh
 		min-height: 100vh
 	&__content, &__header, &__cta
@@ -31,7 +32,7 @@
 		.bc-button
 			flex: 0 1 auto
 	&__heading
-		font-size: $text-10 
+		font-size: $text-11 
 		@include doFeatureHeading($heading-line-height, $h1)
 		margin-bottom: $vertical-unit
 
