--- a/node-development/app/sass/framework/_navigation-schemes.sass
+++ b/node-development/app/sass/framework/_navigation-schemes.sass
@@ -102,18 +102,25 @@
 		padding-top:  	$vertical-unit/2
 		padding-bottom: $vertical-unit/2
 		padding-left: $gutter
+		a
+			text-decoration: none
 	&__toggle 
 		position: absolute
 		right: -1%
 		border-radius: 50%
 		background-color: $brand-primary
 		/*transition: background-color 482ms ease-in-out*/ 
+		
+		.bc-menu-icon
+			max-width: 	$text-04 
+			max-height: $text-04 
 		.bc-svg-icon
 			max-width: 	$text-04 
 			max-height: $text-04 
 			fill: $white
-		&.is-active
+		&.is-active, &:hover, &:active, &:focus
 			border: 1px solid $brand-primary
+			background-color: $brand-darker
 	&__wrapper
 		z-index: 0
 		width: 98%
@@ -141,6 +148,11 @@
 			padding-top: 		$vertical-unit/2 
 			padding-bottom: $vertical-unit/2 
 			border-bottom: 1px solid $brand-primary
+			text-decoration: none
+			transition: background-color 280ms ease-out
+			&:active, &:hover, &:focus
+				text-decoration: underline
+				background-color: darken($shade-02, 10%)
 		&:last-child
 			> a
 				border-bottom: none
@@ -317,28 +329,27 @@
 		align-items: center
 		&__label
 			font-size: $text-01
+			font-weight: 300
 			color: $white
-			background-color: rgba($black, 0.24)
 			margin-top: 		0
 			margin-bottom: 	0
-			margin-right: $gutter/4 
-			padding: $gutter/3 $gutter/1.5  
-			border: 1px solid $white
+			margin-right: $gutter/2
+			padding: $gutter/3
 			border-radius: 	$text-01+$gutter/3 
 		&__icon
-			background-color: rgba($black, 0.24)
+			background-color: rgba($brand-darker, 0.68)
 			display: inline-flex
 			align-items: center
-			justify-content: space-between
+			justify-content: center
 			padding: $gutter/3  
 			border: 1px solid $white
+			border-left: none
 			border-radius: 	50%
 			transition: background-color 280ms ease-out
 			.bc-svg-icon
-				//margin-left: $gutter/2  
-				transform: rotate(90deg)
-				width: 	$text-01*1.3+0.05rem
-				height: $text-01*1.3+0.05rem
+				transform: rotate(45deg)
+				width: 	$text-00
+				height: $text-00
 				fill: $white
 				transition: transform 280ms ease-out
 			&:hover, &:active, &:focus
@@ -353,6 +364,8 @@
 		padding: 0
 		border-radius: 		$text-01
 		background-color: $white
+		&.is-active
+			z-index: 20
 	&__item
 		padding: 0	
 		display: flex
