--- a/node-development/app/sass/framework/components/_bc-inner-page-header.sass
+++ b/node-development/app/sass/framework/components/_bc-inner-page-header.sass
@@ -11,9 +11,11 @@
 	& &__heading
 		font-size: $super-large-text
 		padding-bottom: $vertical-unit/1.5
-		margin-bottom: 0
-		color: $brand-secondary 
+		margin-bottom: $vertical-unit/2
+		color: $brand-secondary
+		border-bottom: 1px solid $brand-secondary 
 	& &__sub-heading
-		font-size: $h3-text
-		margin-top: $vertical-unit/1.5
+		font-size: $h2
+		margin-top: 0
+		margin-bottom: 0
 		color: $white 
