--- a/node-development/app/sass/style.sass
+++ b/node-development/app/sass/style.sass
@@ -85,7 +85,7 @@ iframe
 	
 .bc-fade-in-up--is-not-visible
 	opacity: 0
-	transform: translateY(4.28rem)
+	transform: translateY(2.5rem)
 /* Project custom site header */
 .bc-site-header
 	&__logo
@@ -135,10 +135,10 @@ iframe
 .site-quicklinks
 	& &__heading
 		color: $brand-primary
+	& 
+		a 
+			font-size: $text-01
 	& &__item 
-		&:last-child
-			> a
-				border-bottom: 1px solid
 		&:nth-of-type(1n)
 			> a
 				color: $mid-green
@@ -165,11 +165,8 @@ iframe
 				@include linkHover
 					background-color: $purple 
 	@media screen and (min-width: $large)
-		
 		.site-quicklinks__list
 			grid-template: auto / repeat(3, 1fr)
-	
-		
 .bc-header-sub-nav
 	& &__link
 		background-color: $brand-secondary
@@ -185,6 +182,7 @@ iframe
 	&__body
 		justify-content: flex-end
 		align-items: flex-start
+		z-index: 30
 		&__text
 			background-color: $brand-primary
 			padding: $vertical-unit $gutter/2
@@ -207,8 +205,7 @@ iframe
 		.bc-hero__body
 			&__text
 				background-color: transparent
-				padding-left: 0
-				padding-right: 0
+				padding: $vertical-unit/2 0
 				p 
 					margin-bottom: $vertical-unit/2
 		.bc-hero__heading
@@ -229,6 +226,10 @@ iframe
 				svg
 					.isd-wave
 						fill: $brand-primary
+	&.has-waves
+		height: auto
+		.bc-hero__content
+			height: 100vh
 	@media screen and (min-width: $large)
 		&.bc-hero--inpage
 			.bc-hero__body
@@ -248,7 +249,7 @@ iframe
 				background-image: none
 				background-repeat: no-repeat
 				background-size: contain
-				background-position: 50% 90%
+				background-position: 50% 90% 
 				z-index: -10
 				opacity: 0.88
 				@media screen and (min-width: $med)
@@ -259,12 +260,7 @@ iframe
 				@media screen and (min-width: $large)
 					background-position: 50% 90%
 					
-			@media screen and (min-width: $large)
-				margin-left: auto
-				margin-right: auto
-				width: 100%
-				padding-left: (4.444rem + $gutter/2)
-				padding-right: (4.444rem + $gutter/2)
+			
 		
 /* Project custom bc-cards */
 .bc-card, .bc-two-col-card
@@ -893,32 +889,40 @@ iframe
 		grid-template-columns: 100%
 	
 .bc-inner-page-header
-	position: relative
-	padding-top: 		$vertical-unit * 5
-	padding-bottom: $vertical-unit * 4
-	&__bg-svg
-		position: absolute 
-		top: 50%
-		transform: translateY(-50%)
-		width: 100%
-		height: 100%
-		left: -2%
-		z-index: 1
-		svg
-			position: absolute
-			top: 50%
-			transform: translateY(-50%)
-			max-height: 100%
-			width: 72%
-			left: 0
-			fill: $brand-primary
-	&.has-inner-sub-nav
-		padding-bottom: 2rem
+	padding-top: 0
+	padding-bottom: 0
+	background-image: none
+	&__wrap
+		position: relative
+		padding-top: 		$vertical-unit * 5
+		padding-bottom: $vertical-unit * 4
+		background-image: linear-gradient(to bottom left, $brand-primary 0%, $brand-darker 40%) 
+		.bc-inner-page-header
+			&__bg-svg
+				position: absolute 
+				top: 50%
+				transform: translateY(-50%)
+				width: 100%
+				height: 100%
+				left: -2%
+				z-index: 1
+				svg
+					position: absolute
+					top: 50%
+					transform: translateY(-50%)
+					max-height: 100%
+					width: 72%
+					left: 0
+					fill: $brand-primary
+			&.has-inner-sub-nav
+				padding-bottom: 2rem
 @media screen and (min-width: $med)
 	.bc-inner-page-header
-		&__bg-svg
-			width: 48%
-			left: 2%
+		&__wrap
+			.bc-inner-page-header
+				&__bg-svg
+					width: 48%
+					left: 2%
 
 /* SVG defs */
 .bc-svg-defs
@@ -1006,26 +1010,30 @@ iframe
 $waves-height: 50px
 /* svg rainbow gradient used in svg image **/
 .bc-feature-component
-	padding-top: 		calc(#{$vertical-unit} * 2 + (#{$waves-height} / 2))
-	padding-bottom: calc(#{$vertical-unit} * 2 + (#{$waves-height} / 2))
-
-
-
+	&.has-waves
+		padding-top: 0
+		padding-bottom: 0
+		.bc-content-component__wrap
+			position: relative
+			width: 100%
+			padding-top: $vertical-unit * 3
+			padding-bottom: $vertical-unit * 3
+		&.site-quicklinks-component
+			.bc-content-component__wrap
+				padding-top: $vertical-unit 
+				padding-bottom: $vertical-unit * 2
 .has-waves 
-	z-index: 10 
+	position: relative
+	z-index: 5
 	.wave-wrap
-		position: absolute
-		bottom: -$waves-height
 		width: 100%
-		height: $waves-height
 		svg
 			.isd-wave
-				fill: $brand-darker
+				fill: $white
 		&__rainbow
 			fill: url(#isd-rainbow-grad)
 		&__wave
 			width: 100%
-			height: $waves-height
 			fill: $brand-darker
 	&--at-top
 		.wave-wrap
@@ -1040,16 +1048,61 @@ $waves-height: 50px
 					fill: $brand-darker
 .bc-feature-component
 	&.has-waves
-		.wave-wrap
-			svg
-				.isd-wave
-					fill: $shade-03
 		&.has-high-chroma
 			.wave-wrap
+				svg
+					.isd-wave
+						fill: $brand-darker
+.bc-inner-page-header
+	&.has-waves
+		.wave-wrap
 			svg
 				.isd-wave
 					fill: $brand-darker
 		
+/* Shading */
+@each $name, $shade in $shades	
+	.has-waves	
+		&.has-#{$name} 
+			background-color: transparent
+			.media-overlay
+				background-color: $shade
+				z-index: 0
+			.wave-wrap
+				z-index: 5
+				svg
+					.isd-wave
+						fill: $shade
+		
+@each $name, $shade in $shades	
+	.has-#{$name}-gradient
+		&.has-waves 
+			background-image: none
+			.media-overlay
+				@include gradOverlay($start-colour: $shade, $mid-colour: darken($shade, 6%), $end-colour: darken($shade, 12.5%), $stop: 100%)
+				z-index: 0
+			.wave-wrap
+				z-index: 5
+				svg
+					.isd-wave
+						fill: darken($shade, 12.5%)
+
+/* Coloring */
+@each $name, $color in $colors	
+	$color-invert: nth($color, 2) 
+	$color: nth($color, 1)
+	.has-#{$name}-background 
+		&.has-waves 
+			background-color: transparent
+			.media-overlay
+				background-color: $color
+				z-index: 0
+			.wave-wrap
+				z-index: 5
+				svg
+					.isd-wave
+						fill: $color
+	
 /* Accordion project overrides */
 .bc-accordion      
 	&__block-heading:nth-of-type(1n)
